c4prj2_input/grade.txt
Grading at Tue Mar  9 08:14:15 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:18:9: error: void value not ignored as it ought to be
     if( assert_card_valid(c)){
         ^
input.c:19:21: error: request for member ‘decks’ in something not a structure or union
       add_card_to(fc.decks[fc->n_decks],c);
                     ^
input.c:23:47: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
      add_future_card(fc,fc->decks[fc->n_decks]->n_cards,unknown);
                                               ^
input.c: In function ‘read_input’:
input.c:40:7: error: request for member ‘n_cards’ in something not a structure or union
   read.n_cards = i;
       ^
Compilation of input.c failed

Overall Grade: F
